(WIDGETS.tw)Fixed appendPBody widget not showing same text after clicking. Added appendPBody widgets to (test.tw) for testing.
(style.css)Re-organised CSS - moved passage footer/header above links and notes styling. Changed .reveal style to alter transition duration default.

(MAIN.tw)Removed testing links/text from Start passage.

--- a/src/style.css
+++ b/src/style.css
@@ -37,55 +37,6 @@ body {
     flex-flow: column nowrap;
 }
 
-.passage a {
-    text-decoration: underline dotted;
-    text-underline-offset: 0.5rem;
-    color: var(--colour-link--default);
-    font-weight: 700;
-}
-
-.macro-link {
-    display: inline-block;
-    width: auto;
-    margin: 0;
-}
-
-.passage .box {
-    color: green;
-    border: solid 1px green;
-    width: 200px;
-    height: 200px;
-}
-
-
-/* For image and sfx notes in passages */
-.passage .note-img {
-    color: rgb(63, 241, 250);
-}
-
-.passage .note-sfx {
-    color: rgb(254, 69, 189);
-}
-
-.reveal {
-    border: green;
-}
-
-.ascii-art {
-    font-size: clamp(1rem, 1rem + 1vw, 1.1rem);
-    white-space: pre;
-    /* line-height: clamp(1rem, 1vw + 1rem, 1.5rem); */
-}
-
-.game-note {
-    border: solid 1px #8f8f8f;
-    padding: 1rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    width: 80%;
-    line-height: 2em;
-}
-
 /* --- Passage Header & Footer --- */
 .passage-footer, .passage-header {
     /* border: solid 1px red; */
@@ -119,7 +70,54 @@ body {
     border-top: var(--passage-header-footer-dividers);
 }
 
+.passage a {
+    text-decoration: underline dotted;
+    text-underline-offset: 0.5rem;
+    color: var(--colour-link--default);
+    font-weight: 700;
+}
 
+.passage .box {
+    color: green;
+    border: solid 1px green;
+    width: 200px;
+    height: 200px;
+}
+
+
+/* For image and sfx notes in passages */
+.passage .note-img {
+    color: rgb(63, 241, 250);
+}
+
+.passage .note-sfx {
+    color: rgb(254, 69, 189);
+}
+
+/* Custom linkappend transition duration*/
+.reveal .macro-linkappend-insert {
+    transition-duration: 3s;
+}
+
+.ascii-art {
+    font-size: clamp(1rem, 1rem + 1vw, 1.1rem);
+    white-space: pre;
+    /* line-height: clamp(1rem, 1vw + 1rem, 1.5rem); */
+}
+
+.game-note {
+    border: solid 1px #8f8f8f;
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    width: 80%;
+    line-height: 2em;
+}
+
+/* --- CUSTOM WIDGETS ----------- */
+.appendPBody {
+    display: block;
+}
 
 /* =================================== */
 /* PASSAGE SPECIFIC STYLING            */
@@ -140,6 +138,7 @@ a[data-passage="Dream Sequence"] {
     font-size: 2rem;
     text-align: left;
     font-weight: 300;
+    text-decoration: none;
     display: inl;
     color: #fff;
     transition: all var(--transition-dur) linear;
